force-app/main/default/objects/User_Calendar__c/User_Calendar__c.object-meta.xml
<CustomObject>
    <label>User Calendar</label>
    <nameField>
        <label>User Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>