force-app/main/default/objects/User_Calendar__c/fields/Calendar_Activity__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity__c</fullName>
    <label>Calendar Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>