force-app/main/default/objects/User_Calendar__c/fields/Calendar_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Activity_Date__c</fullName>
    <label>Calendar Activity Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>