force-app/main/default/objects/User_Calendar__c/fields/Calendar_Day__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Day__c</fullName>
    <label>Calendar Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>