force-app/main/default/objects/User_Calendar__c/fields/Calendar_email_template__c.field-meta.xml
<CustomField>
    <fullName>Calendar_email_template__c</fullName>
    <label>Calendar_email_template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>