force-app/main/default/objects/User_Calendar__c/fields/Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week__c</fullName>
    <label>Calendar Week</label>
    <length>100</length>
    <type>Text</type>
</CustomField>