force-app/main/default/objects/User_Calendar__c/fields/CHOP_INTEND__c.field-meta.xml
<CustomField>
    <fullName>CHOP_INTEND__c</fullName>
    <label>CHOP-INTEND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>