force-app/main/default/objects/User_Calendar__c/fields/Corticosteroid_Dose__c.field-meta.xml
<CustomField>
    <fullName>Corticosteroid_Dose__c</fullName>
    <label>Corticosteroid_Dose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>