force-app/main/default/objects/User_Calendar__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event_Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>