force-app/main/default/objects/User_Calendar__c/fields/First_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Notification_Date__c</fullName>
    <label>First_Notification_Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>