force-app/main/default/objects/User_Calendar__c/fields/Platelets__c.field-meta.xml
<CustomField>
    <fullName>Platelets__c</fullName>
    <label>Platelets</label>
    <length>100</length>
    <type>Text</type>
</CustomField>