force-app/main/default/objects/User_Calendar__c/fields/Transaminasas_ALT_Ref__c.field-meta.xml
<CustomField>
    <fullName>Transaminasas_ALT_Ref__c</fullName>
    <label>Transaminasas_ALT_Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>