force-app/main/default/objects/User_Calendar__c/fields/Transaminasas_AST__c.field-meta.xml
<CustomField>
    <fullName>Transaminasas_AST__c</fullName>
    <label>Transaminasas_AST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>