force-app/main/default/objects/User_Calendar__c/fields/User_Infusion_Date_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Infusion_Date_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Infusion Dates</label>
    <referenceTo>User_Infusion_Dates__c</referenceTo>
    <relationshipLabel>User Calendar</relationshipLabel>
    <relationshipName>User_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>