force-app/main/default/objects/User_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Calendar_Activity__c</columns>
    <columns>Calendar_Activity_Date__c</columns>
    <columns>User_Infusion_Date_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>CHOP_INTEND__c</columns>
    <columns>Corticosteroid_Dose__c</columns>
    <columns>Platelets__c</columns>
    <columns>Transaminasas_ALT__c</columns>
    <columns>Transaminasas_AST__c</columns>
    <columns>Calendar_Week__c</columns>
    <columns>Transaminasas_ALT_Calval__c</columns>
    <columns>Transaminasas_ALT_Ref__c</columns>
    <columns>Transaminasas_AST_Calval__c</columns>
    <columns>Transaminasas_AST_Ref__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>